--- a/client/views/order.html
+++ b/client/views/order.html
@@ -1,3 +1,15 @@
 <section>
-    <h1>Current Order</h1>
+    <div class="container">
+        <div class="inner-container">
+            <h1>Current Order</h1>
+            <div class="order-info-container">
+                <h2>Order {{order.id}} for {{customer.firstName}} {{customer.lastName}}</h2>
+                <h3>Address: {{customer.address}} {{customer.unitNum}}, {{customer.city}}, {{customer.state}} {{customer.zipcode}}</h3>
+                <ng-map center="{{location}}" zoom=15>
+                    <marker position=“{{markerPoints.arbitrary.lat}}” />
+                    <marker position=“[{{markerPoints.customer.lat}},{{markerPoints.customer.lng}}]” />
+                </ng-map>
+            </div>
+        </div>
+    </div>
 </section>
