--- a/client/css/style.css
+++ b/client/css/style.css
@@ -25,6 +25,7 @@ body {
   padding:.5rem;
   width: 100%;
   height: 40px;
+  margin-bottom: 40px;
 }
 
 button:active {
@@ -83,7 +84,7 @@ input {
   margin-right: auto;
 }
 
-.text-field label {
+label {
   font-size: 14px;
   margin-bottom: 8px;
 }
@@ -106,15 +107,10 @@ input {
 }
 
 .date-section {
-  height: 60px;
+  
   border-bottom: 1px solid black;
   border-top: 1px solid black;
-  padding: 8%;
   margin-bottom: 8%;
-}
-
-.container h1 {
-  text-align: center;
 }
 
 .container {
@@ -122,29 +118,22 @@ input {
   padding-right: 12%;
 }
 
+.container h1 {
+  text-align: center;
+}
+
+.datepicker-container {
+  margin: 10%;
+}
+
 .cal-input {
   text-align: center;
-  border: none;
+  border: 1px solid #26DEBD;
   border-radius: 0 !important;
   background: transparent !important;
   box-shadow: none !important;
   cursor:pointer;
-  height: 50%;
-}
-
-.cal-button-open {
-  border: 1px solid #26DEBD;
-  border-radius: 0 !important;
-  background: transparent !important;
-  width: 100%;
-}
-
-.cal-button-open :hover {
-  background: #fff;
-}
-
-.cal-button-open i {
-  padding: 1px;
+  height: 60px;
 }
 
 .cal-button-container {
@@ -157,6 +146,10 @@ input {
   width: 100%;
   border: 1px solid black;
   border-radius: 5px;
+}
+
+.form-control-feedback {
+  top: 40px !important;
 }
 
 .gm-style {
