--- a/client/css/style.css
+++ b/client/css/style.css
@@ -18,13 +18,13 @@ body {
 .submit-button {
   background:#26DEBD;
   border:0;
-  color: #eee;
+  color: #fff;
   cursor:pointer;
   font-family:'Proxima-Nova';
-  font-size:16px;
-  padding:.5rem;
+  font-size: 20px;
+  padding: .5rem;
   width: 100%;
-  height: 40px;
+  height: 50px;
   margin-bottom: 40px;
 }
 
@@ -38,8 +38,14 @@ button:active {
 }
 
 label {
+  font-size: 14px;
   display:block;
   width:200px;
+  margin-bottom: 0px;
+}
+
+.error-label {
+  color: palevioletred;
 }
 
 select {
@@ -54,16 +60,18 @@ p {
 
 input {
   width: 100%;
-  height: 40px;
+  height: 50px;
   font-family: "Proxima-Nova";
-  font-size: 2rem;
+  font-size: 20px;
   box-sizing: border-box;
-  margin-bottom: 20px;
+  /*margin-bottom: 20px;*/
+  border: 1px solid gray;
+  text-indent: 10px;
 }
 
 .container-login {
   margin-top: 10%;
-  width: 20%;
+  width: 30%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -78,15 +86,37 @@ input {
   text-align: center;
 }
 
+.container-login .error-label {
+  width: 100%;
+  text-align: center;
+}
+
 .container-login input button {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
 
-label {
-  font-size: 14px;
-  margin-bottom: 8px;
+.inner-container {
+  margin-top: 10%;
+}
+
+.inner-container h1 {
+  margin-bottom: 40px;
+}
+
+.inner-container h3 {
+  margin-bottom: 30px;
+  font-weight: bold;
+  color: black;
+}
+
+.final {
+  margin-bottom: 40px;
+}
+.text-field input {
+  margin-bottom: 20px;
+  
 }
 
 .form-button {
@@ -107,9 +137,8 @@ label {
 }
 
 .date-section {
-  
-  border-bottom: 1px solid black;
-  border-top: 1px solid black;
+  border-bottom: 1px solid gray;
+  border-top: 1px solid gray;
   margin-bottom: 8%;
 }
 
@@ -122,22 +151,64 @@ label {
   text-align: center;
 }
 
+.row {
+  margin-bottom: 20px;
+}
+
+.last-row {
+  margin-bottom: 60px;
+}
+
+.dropdown-menu {
+  max-height: 300px;
+  overflow-y: auto; 
+}
+
+.dropdown-menu a {
+  cursor: pointer;
+}
+
+.dropdown button {
+  width: 100%;
+  height: 50px;
+  border-radius: 0;
+  border: 1px solid gray;
+  font-size: 20px;
+}
+
+.dropdown button:focus {
+  background-color: #fff !important;
+}
+
+.dropdown-indicator {
+  position: absolute;
+  right: 0;
+  margin-right: 10%;
+}
+
 .datepicker-container {
   margin: 10%;
+  width: 50%;
+  margin-left: 25%;
 }
 
 .cal-input {
   text-align: center;
-  border: 1px solid #26DEBD;
+  border: 2px solid #26DEBD;
   border-radius: 0 !important;
   background: transparent !important;
   box-shadow: none !important;
-  cursor:pointer;
+  cursor: pointer;
   height: 60px;
+  font-size: 20px;
 }
 
 .cal-button-container {
   height: 50%;
+}
+
+.form-control-feedback {
+  top: 35px !important;
 }
 
 .order-info-container {
@@ -146,14 +217,20 @@ label {
   width: 100%;
   border: 1px solid black;
   border-radius: 5px;
+  margin-top:10%;
 }
 
-.form-control-feedback {
-  top: 40px !important;
+.order-info-container h2, h4 {
+  margin-left: 5%;
 }
 
-.gm-style {
-  
+.map-container {
+    margin: 10%;
+    height: 80%;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid gray;
 }
 
 
